# credit-scoring-mlops

./: .coverage  .env.example  .gitignore  classification_report.txt  mlflow.db  params.yaml  pyproject.toml
api/: main.py
src/data/: ingest.py
src/features/: features.py  transformers.py
src/models/: train.py
tests/: test_pipeline.py
