[project]
name = "credit-scoring-mlops"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "mlflow>=2.10",
    "dvc>=3.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.0",
    "prefect>=2.16",
    "evidently>=0.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "black>=24.0",
    "mypy>=1.8",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
